style: file .css ti stye of page

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,98 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+.app-contaner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 4rem 0.5rem;
+}
+.pokemon-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.all-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+.thumb-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1.5rem 0 ;
+  margin: 0.3rem;
+  border: 1px solid #3f3e3e;
+  border-radius: 0.2rem;
+  min-width: 160px;
+  text-align: center;
+  box-shadow: 0 3px 15px rgba(177, 55, 55, 0.089);
+}
+h3 {
+  margin-bottom: 0.2rem;
+}
+.thumb-container .number {
+  border-radius: 1rem;
+  padding: 0.2rem 0.4rem;
+  background-color: rgba(204, 90, 90, 0.3);
+}
+.thumb-container img {
+  width: 100px;
+  height: 100px;
+}
+.thumb-container small {
+  text-transform: capitalize;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.detail-wrapper button {
+  color: rgb(22, 22, 22);
+  padding: .5rem;
+  margin-top: 1rem;
+  border: none;
+  border-radius: 0.2rem;
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.185);
+}
+.load-more {
+  background: #0e0d0d linear-gradient(#2ba6cc,#f1f1f1) repeat-x;
+  border-radius: 2px;
+  border: 1px solid #31869b;
+  color: rgb(32, 31, 31);
+  padding: 0.5rem 1.5rem;
+  min-width: 50%;
+  margin-top: 1rem;
+}
+.rock {
+  background-color: rgb(7, 7, 7);
+}
+.ghost {
+  background-color: rgb(121, 105, 105);
+}
+.electric {
+  background-color: rgb(245, 245, 19);
+}
+.bug {
+  background-color: #e99a23;
+}
+.poison {
+  background-color: #992bc5;
+}
+.normal {
+  background-color: #b6aaaa;
+}
+.fairy {
+  background-color: rgba(238, 31, 66, 0.863);
+}
+.fire {
+  background-color: #6b3228;
+}
+.grass {
+  background-color:#1bf014;
+}
+.water {
+  background-color:#4890c4;
 }
